完成控件禁用逻辑

--- a/Flooding/FloodingWinUI.csproj
+++ b/Flooding/FloodingWinUI.csproj
@@ -14,22 +14,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Include="Assets\SplashScreen.scale-200.png"/>
-        <Content Include="Assets\LockScreenLogo.scale-200.png"/>
-        <Content Include="Assets\Square150x150Logo.scale-200.png"/>
-        <Content Include="Assets\Square44x44Logo.scale-200.png"/>
-        <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png"/>
-        <Content Include="Assets\StoreLogo.png"/>
-        <Content Include="Assets\Wide310x150Logo.scale-200.png"/>
+        <Content Include="Assets\SplashScreen.scale-200.png" />
+        <Content Include="Assets\LockScreenLogo.scale-200.png" />
+        <Content Include="Assets\Square150x150Logo.scale-200.png" />
+        <Content Include="Assets\Square44x44Logo.scale-200.png" />
+        <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
+        <Content Include="Assets\StoreLogo.png" />
+        <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0"/>
-        <PackageReference Include="Drastic.MicaAcrylicWindows" Version="1.1.0"/>
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1"/>
-        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25276-preview"/>
-        <PackageReference Include="WinUIEx" Version="2.1.0"/>
-        <Manifest Include="$(ApplicationManifest)"/>
+        <PackageReference Include="CalcBinding" Version="2.5.2" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+        <PackageReference Include="Drastic.MicaAcrylicWindows" Version="1.1.0" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25276-preview" />
+        <PackageReference Include="WinUIEx" Version="2.1.0" />
+        <Manifest Include="$(ApplicationManifest)" />
     </ItemGroup>
 
     <!-- 
@@ -38,10 +39,10 @@
       package has not yet been restored.
     -->
     <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-        <ProjectCapability Include="Msix"/>
+        <ProjectCapability Include="Msix" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\SendKeys\SendKeys.csproj"/>
+        <ProjectReference Include="..\SendKeys\SendKeys.csproj" />
     </ItemGroup>
 
     <ItemGroup>
